fix(example-viewer): don't wrap code samples (#289)

--- a/material.angular.io/src/app/pages/component-viewer/component-overview.scss
+++ b/material.angular.io/src/app/pages/component-viewer/component-overview.scss
@@ -1,8 +1,10 @@
 @import '../../../styles/constants';
 
 component-overview {
+  display: flex;
+  align-items: flex-start;
+
   @media (max-width: $small-breakpoint-width) {
-    display: flex;
     flex-direction: column;
   }
 }
