--- a/material.angular.io/src/app/shared/example-viewer/_example-viewer-theme.scss
+++ b/material.angular.io/src/app/shared/example-viewer/_example-viewer-theme.scss
@@ -29,6 +29,7 @@
 
     .docs-example-source {
       border-bottom: 1px solid mat-color($foreground, divider);
+      overflow-x: scroll;
     }
   }
 }
