--- a/material.angular.io/src/styles/_general.scss
+++ b/material.angular.io/src/styles/_general.scss
@@ -11,13 +11,6 @@ h1, h2 {
   font-weight: 400;
 }
 
-pre {
-  // Pre elements won't wrap text by default and can exceed the boundaries of their parent element.
-  // This adds extra scroll space when visiting the docs mobile. Pre-wrapping the code examples
-  // will ensure that the code never exceeds the page width.
-  white-space: pre-wrap;
-}
-
 .docs-primary-header {
   padding-left: 20px;
 
